Feat: Estilizando o footer, introduzindo disclosure para a parte de cima do footer e alinhando itens, faltando estilizar o disclosure

--- a/store/blocks/footer/footerDesktop.jsonc
+++ b/store/blocks/footer/footerDesktop.jsonc
@@ -10,7 +10,7 @@
     "children": [
       "flex-layout.col#upperFooterCol1",
       "flex-layout.col#upperFooterCol2",
-      "flex-layout.col#upperFooterCol3"
+      "flex-layout.row#upperFooterCol3"
     ],
     "props": {
       "blockClass": "footer-upperFooterDesktop"
@@ -157,7 +157,7 @@
     }
   },
 
-  "flex-layout.col#upperFooterCol3": {
+  "flex-layout.row#upperFooterCol3": {
     "children": ["image#Congratulations1", "image#Congratulations2"],
     "props": {
       "blockClass": "footer-upperFooterCol3"
@@ -165,14 +165,16 @@
   },
   "image#Congratulations1": {
     "props": {
-      "src": "",
-      "width": "100px"
+      "src": "https://avatars.githubusercontent.com/u/78617230?s=40&v=4",
+      "width": "100px",
+      "blockClass": "footer-congratulationsImage"
     }
   },
   "image#Congratulations2": {
     "props": {
-      "src": "",
-      "width": "100px"
+      "src": "https://avatars.githubusercontent.com/u/78617230?s=40&v=4",
+      "width": "100px",
+      "blockClass": "footer-congratulationsImage"
     }
   },
 
@@ -324,8 +326,7 @@
   "flex-layout.row#bottomFooterDesktop": {
     "children": [
       "flex-layout.col#bottomFooter1",
-      "flex-layout.col#bottomFooter2",
-      "flex-layout.col#bottomFooter3"
+      "flex-layout.col#bottomFooter2"
     ],
     "props": {
       "blockClass": "bottomFooterDesktop",
@@ -333,24 +334,9 @@
     }
   },
 
+
   "flex-layout.col#bottomFooter1": {
-    "children": ["image#footerLogo"],
-    "props": {
-      "width": "9%",
-      "preventVerticalStretch": true,
-      "verticalAlign": "middle",
-      "blockClass": "bottomFooter1"
-    }
-  },
-
-  "image#footerLogo": {
-    "props": {
-      "src": "assets/images/logo.svg"
-    }
-  },
-
-  "flex-layout.col#bottomFooter2": {
-    "children": ["rich-text#aiwaInfo1", "rich-text#aiwaInfo2"],
+    "children": ["rich-text#bricoBravoInfo1"],
     "props": {
       "width": "65%",
       "preventVerticalStretch": true,
@@ -358,85 +344,25 @@
       "blockClass": "bottomFooter2"
     }
   },
-
-  "rich-text#aiwaInfo1": {
+  "rich-text#bricoBravoInfo1": {
     "props": {
-      "text": "2022 @ All Right Reserved to Aiwa Brasil",
-      "blockClass": "aiwaInfoOne"
+      "text": "BBO Srl - Sede operativa: Via Galla Placidia 28 - 00159 ROMA (RM) Italia | Capitale sociale versato: 10.000€ | P.Iva IT10135840964 | REA 2508431 | Copyright © 2022. All Rights Reserved",
+      "blockClass": "footer-aboutUs"
     }
   },
 
-  "rich-text#aiwaInfo2": {
+  "flex-layout.col#bottomFooter2": {
+    "children": ["image#bottomFooterTechnologyImage"],
     "props": {
-      "text": "CNPJ: 07.666.567/0001-40 - Endereço: Estrada da Volta - 1200 - Conceição Do Jacuípe - BA",
-      "blockClass": "aiwaInfoTwo"
-    }
-  },
-
-  "flex-layout.col#bottomFooter3": {
-    "children": ["flex-layout.row#bottomFooter3"],
-    "props": {
-      "width": "18%",
+      "width": "9%",
       "preventVerticalStretch": true,
-      "verticalAlign": "middle"
+      "verticalAlign": "middle",
+      "blockClass": "bottomFooter1"
     }
   },
-
-  "flex-layout.row#bottomFooter3": {
-    "children": [
-      "flex-layout.col#bottomFooterTechnology",
-      "flex-layout.col#bottomFooterMadeBy"
-    ],
-    "props": {
-      "blockClass": "bottomFooter3"
-    }
-  },
-
-  "flex-layout.col#bottomFooterTechnology": {
-    "children": [
-      "rich-text#bottomFooterTechnologyText",
-      "image#bottomFooterTechnologyImage"
-    ],
-    "props": {
-      "preventVerticalStretch": true,
-      "blockClass": "bottomFooterTechnology"
-    }
-  },
-
-  "rich-text#bottomFooterTechnologyText": {
-    "props": {
-      "text": "Tecnologia",
-      "blockClass": "bottomFooterText"
-    }
-  },
-
   "image#bottomFooterTechnologyImage": {
     "props": {
       "src": "assets/icons/vtexWhiteLogo.svg"
-    }
-  },
-
-  "flex-layout.col#bottomFooterMadeBy": {
-    "children": [
-      "rich-text#bottomFooterMadeByText",
-      "image#bottomFooterMadeByImage"
-    ],
-    "props": {
-      "preventVerticalStretch": true,
-      "blockClass": "bottomFooterTechnology"
-    }
-  },
-
-  "rich-text#bottomFooterMadeByText": {
-    "props": {
-      "text": "Feito por",
-      "blockClass": "bottomFooterText"
-    }
-  },
-
-  "image#bottomFooterMadeByImage": {
-    "props": {
-      "src": "assets/icons/b8oneWhiteLogo.svg"
     }
   }
 }
