--- a/store/blocks/header/headerMobile.jsonc
+++ b/store/blocks/header/headerMobile.jsonc
@@ -20,8 +20,7 @@
   "flex-layout.col#header-mobile": {
     "children": [
       "flex-layout.col#header-logo",
-      "flex-layout.col#header-searchBar",
-      "minicart.v2#mobile"
+      "flex-layout.col#header-searchBar"
     ]
   },
 
