Feat: Ajustando menulateral no mobile

--- a/store/blocks/header/headerMobile.jsonc
+++ b/store/blocks/header/headerMobile.jsonc
@@ -20,7 +20,8 @@
   "flex-layout.col#header-mobile": {
     "children": [
       "flex-layout.col#header-logo",
-      "flex-layout.col#header-searchBar"
+      "flex-layout.col#header-searchBar",
+      "drawer#menu-mobile"
     ]
   },
 
@@ -29,6 +30,13 @@
     "props": {
       "preventHorizontalStretch": true,
       "blockClass": "header-mobile-searchBar"
+    }
+  },
+  "drawer#menu-mobile": {
+    "children": ["header-mega-menu"],
+    "props": {
+      "blockClass": "drawer-desktop",
+      "width": "100%"
     }
   }
 }
