--- a/manifest.json
+++ b/manifest.json
@@ -70,7 +70,7 @@
     "vtex.order-manager": "0.x",
     "vtex.order-items": "0.x",
     "vtex.modal-layout": "0.x",
-    "vtex.search-graphql": "0.49.0",
+    "vtex.search-graphql": "0.x",
     "vtex.store-video": "1.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
