Importando icones das redes sociais, estruturando a newsletter e introduzindo a estilização

--- a/store/blocks/footer/footerDesktop.jsonc
+++ b/store/blocks/footer/footerDesktop.jsonc
@@ -1,6 +1,7 @@
 {
   "footer-layout.desktop": {
     "children": [
+      "flex-layout.row#newsletter",
       "flex-layout.row#FooterLinksDesktop",
       "flex-layout.row#footerPaymentMethods",
       "flex-layout.row#bottomFooterDesktop"
