--- a/store/blocks/footer/newsletter.jsonc
+++ b/store/blocks/footer/newsletter.jsonc
@@ -1,20 +1,43 @@
 {
   "flex-layout.row#newsletter": {
     "title": "Newsletter",
-    "children": ["flex-layout.col#newsletter"],
+    "children": [
+      "flex-layout.col#newsTitle",
+      "flex-layout.col#submit",
+      "flex-layout.row#share"
+      
+    ],
     "props": {
       "blockClass": "newsletterRow"
     }
   },
-  "flex-layout.col#newsletter": {
+  "flex-layout.col#newsTitle": {
     "children": [
       "rich-text#newsTitle",
-      "rich-text#newsSubTitle",
-      "newsletter-form#footer"
+      "rich-text#newsSubTitle"
     ],
     "props": {
       "blockClass": "newsletterCol"
     }
+  },
+  "rich-text#newsTitle": {
+    "props": {
+      "text": "## Desideri conoscere le ultime novità e offerte?",
+      "textPosition": "LEFT",
+      "textAlignment": "LEFT",
+      "blockClass": "newsTitle"
+    }
+  },
+  "rich-text#newsSubTitle": {
+    "props": {
+      "text": "Ti basterà inserire il tuo indirizzo email e riceverai 5€ di sconto sul tuo primo ordine.",
+      "textPosition": "LEFT",
+      "textAlignment": "LEFT",
+      "blockClass": "newsSubTitle"
+    }
+  },
+  "flex-layout.col#submit": {
+    "children": ["newsletter-form#footer"]
   },
   "newsletter-form#footer": {
     "children": ["flex-layout.row#newsletter-form"],
@@ -50,29 +73,65 @@
 
   "newsletter-input-email": {
     "props": {
-      "placeholderText": "Digite seu email",
+      "placeholderText": "Indirizzo e-mail",
       "blockClass": "newsEmailInput"
     }
   },
   "newsletter-submit": {
     "props": {
-      "submitButtonLabel": "Cadastrar"
+      "submitButtonLabel": ""
     }
   },
-  "rich-text#newsTitle": {
+  "flex-layout.row#share": {
+    "children": [
+      "link#facebook",
+      "link#instagram",
+      "link#youtube",
+      "link#linkedin"
+    ]
+  },
+  "link#facebook": {
     "props": {
-      "text": "## Saiba primeiro",
-      "textPosition": "CENTER",
-      "textAlignment": "CENTER",
-      "blockClass": "newsTitle"
+      "href": "#"
+    },
+    "children": ["image#facebook"]
+  },
+  "image#facebook": {
+    "props": {
+      "src": ""
     }
   },
-  "rich-text#newsSubTitle": {
+  "link#instagram": {
     "props": {
-      "text": "Cadastre-se para receber notícias e lançamentos Aiwa.",
-      "textPosition": "CENTER",
-      "textAlignment": "CENTER",
-      "blockClass": "newsSubTitle"
+      "href": "#"
+    },
+    "children": ["image#instagram"]
+  },
+  "image#instagram": {
+    "props": {
+      "src": "assets/icons/social/Instagram.svg"
+    }
+  },
+  "link#youtube": {
+    "props": {
+      "href": "#"
+    },
+    "children": ["image#youtube"]
+  },
+  "image#youtube": {
+    "props": {
+      "src": "assets/icons/social/YouTube.svg"
+    }
+  },
+  "link#linkedin": {
+    "props": {
+      "href": "#"
+    },
+    "children": ["image#linkedin"]
+  },
+  "image#linkedin": {
+    "props": {
+      "src": "assets/icons/social/Linkedin.svg"
     }
   }
 }
