Importando icone do botão de submit do form da newsletter, estilização básica na newsletter, alinhando itens e preparando para fazer um pull da master

--- a/store/blocks/footer/newsletter.jsonc
+++ b/store/blocks/footer/newsletter.jsonc
@@ -22,7 +22,7 @@
   },
   "rich-text#newsTitle": {
     "props": {
-      "text": "## Desideri conoscere le ultime novità e offerte?",
+      "text": "Desideri conoscere le ultime novità e offerte?",
       "textPosition": "LEFT",
       "textAlignment": "LEFT",
       "blockClass": "newsTitle"
